--- a/web/src/index.html
+++ b/web/src/index.html
@@ -5,7 +5,7 @@
   <title>Total Free Lotto - Angular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/jpeg" href="assets/images/lotto_logo.jpeg">
 
 </head>
 <body>
