--- a/web/src/index.html
+++ b/web/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="icon" type="image/jpeg" href="assets/images/lotto_logo.jpeg">
 
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
   <app-root></app-root>
