--- a/web/src/index.html
+++ b/web/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Total Free Lotto - Angular</title>
-  <base href="/app/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="icon" type="image/jpeg" href="assets/images/lotto_logo.jpeg">
 
